# singletrack

./: CMakeLists.txt  README.md
WFA2-lib/: README.md
WFA2-lib/alignment/: cigar.c
WFA2-lib/wavefront/: wavefront_backtrace.c  wavefront_compute.c  wavefront_unialign.c
basic/: CMakeLists.txt  README.md
basic/src/: alignment.cpp  benchmark.cpp  dp_aligner_base.cpp  dp_aligner_base.h  dp_aligner_singletrack.cpp  dp_aligner_singletrack.h  penalties.h
ksw2_singletrack/: Makefile  README.md  benchmark_singletrack.cpp  ksw2_singletrack.cpp  ksw2_singletrack.hpp
src/: alignment.cpp  alignment.h  benchmark.cpp  dp_aligner.cpp  dp_aligner.h  dp_aligner_base.cpp  dp_aligner_base.h  dp_aligner_mod.cpp  dp_aligner_mod.h  dp_aligner_singletrack.cpp  dp_aligner_singletrack.h  penalties.cpp  penalties.h
tools/python/: generate_dataset.py
